--- a/src/App.scss
+++ b/src/App.scss
@@ -1,20 +1,38 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+
+* {
+  padding: 0;
   margin: 0;
-  color: teal;
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
+  border: none;
+  box-sizing: border-box;
 }
 
-.content {
+input:focus,
+input:active,
+button:focus,
+button:active {
+  outline: none;
+}
+
+body {
+  height: 100%;
+
+  background-color: #e0ffff;
+
+  font-family: 'Ubuntu', sans-serif;
+  font-size: 62.5%;
+  color: #399dff;
+}
+
+.app {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   min-height: 100vh;
 
-  line-height: 1.1;
   text-align: center;
-}
 
-.content h1 {
-  font-size: 3.6rem;
-  font-weight: 700;
+  h1 {
+    font-size: 3.6rem;
+    font-weight: 700;
+  }
 }
