--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,31 @@
-@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding:wght@400;700&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding:wght@400;700&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap');
 
 * {
-  padding: 0;
   margin: 0;
+  padding: 0;
   border: none;
   box-sizing: border-box;
+}
+
+ul,
+ol {
+  list-style: none;
+}
+
+a,
+a:link,
+a:hover,
+a:visited {
+  text-decoration: none;
+}
+
+input,
+button {
+  background-color: transparent;
+  font-family: inherit;
+  font-size: inherit;
+  color: inherit;
 }
 
 input:focus,
@@ -14,25 +35,46 @@ button:active {
   outline: none;
 }
 
+img,
+svg {
+  max-width: 100%;
+  height: auto;
+}
+
+html {
+  font-size: 62.5%;
+}
+
+html,
 body {
   height: 100%;
+  overflow-x: hidden;
 
-  background-color: #e0ffff;
-
-  font-family: 'Nanum Gothic Coding', monospace;
-  font-size: 62.5%;
+  font-family: 'Josefin Sans', sans-serif;
+  font-weight: 400;
   color: teal;
 }
 
 .app {
   display: flex;
   flex-direction: column;
+  align-items: center;
   min-height: 100vh;
+}
+
+.app.light {
+  background-color: #e3e3e3;
+  color: #333029;
+}
+
+.app.dark {
+  background-color: #333029;
+  color: #e3e3e3;
 }
 
 .main {
   width: 100%;
-  max-width: 80rem;
+  max-width: 110rem;
   margin: 0 auto;
-  padding: 0 1rem;
+  padding-bottom: 3rem;
 }
