--- a/src/components/Controls/Controls.module.scss
+++ b/src/components/Controls/Controls.module.scss
@@ -2,7 +2,6 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 100%;
   margin-bottom: 5rem;
   padding: 0 0.9rem;
 }
@@ -27,24 +26,6 @@
   background-color: #f4f2f2;
   box-shadow: 5px 6px 4px 0px rgba(0, 0, 0, 0.3);
 
+  font-size: 1.5rem;
   cursor: pointer;
 }
-
-// select {
-//   appearance: none;
-//   padding: 5px 20px;
-//   border: none;
-//   background: #f0f0f0;
-// }
-
-// /* Стилизация элементов списка */
-// select option {
-//   padding: 10px;
-//   background: #fff;
-//   color: #333;
-// }
-
-// /* Стилизация активного элемента списка */
-// select option:checked {
-//   background: #ccc;
-// }
