--- a/src/components/NotFoundInfo/NotFoundInfo.module.scss
+++ b/src/components/NotFoundInfo/NotFoundInfo.module.scss
@@ -1,8 +1,8 @@
 .container {
   display: grid;
-  place-items: center;
-
-  text-align: center;
+  grid-template: 1fr;
+  justify-items: center;
+  margin-top: 8rem;
 
   span {
     margin-bottom: 3rem;
