--- a/src/components/Country/Country.module.scss
+++ b/src/components/Country/Country.module.scss
@@ -9,14 +9,15 @@
 }
 
 .image {
+  height: 13rem;
   margin-bottom: 2rem;
 
   border-radius: 0.4rem 0.4rem 0 0;
   position: relative;
 
   img {
-    width: 100%;
-    height: 100%;
+    max-width: 100%;
+    max-height: 100%;
     object-fit: cover;
     object-position: center;
 
@@ -39,7 +40,7 @@
 .info {
   li {
     margin-bottom: 0.5rem;
-    font-size: 1.3rem;
+    font-size: 1.2rem;
   }
 
   span {
