--- a/src/components/Country/Country.module.scss
+++ b/src/components/Country/Country.module.scss
@@ -5,7 +5,7 @@
   border-radius: 0.4rem;
   box-shadow: 5px 6px 8px 0px rgba(0, 0, 0, 0.3);
 
-  position: relative;
+  cursor: pointer;
 }
 
 .image {
