--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -1,7 +1,3 @@
-a {
-  color: inherit;
-}
-
 .country {
   display: flex;
   flex-direction: column;
@@ -32,8 +28,7 @@ a {
 }
 
 .content {
-  margin-bottom: 3rem;
-  padding: 0 2rem;
+  padding: 0 2rem 3rem;
 }
 
 .title {
@@ -44,10 +39,10 @@ a {
 .info {
   li {
     margin-bottom: 0.5rem;
-    font-size: 1.2rem;
-  }
+    font-size: 1.3rem;
 
-  span {
-    font-weight: 700;
+    span {
+      font-weight: 700;
+    }
   }
 }
