--- a/src/components/Filter/Filter.module.scss
+++ b/src/components/Filter/Filter.module.scss
@@ -3,14 +3,14 @@
   align-items: center;
   justify-content: space-between;
   margin-bottom: 5rem;
-  padding: 0 0.9rem;
+  padding: 0 1rem;
 }
 
-.searchRegion {
+.searchCountry {
   position: relative;
 }
 
-.input {
+.inputSearchCountry {
   width: 30rem;
   padding: 1.6rem 2rem;
 
@@ -23,10 +23,8 @@
   color: #333029;
 }
 
-.resetIcon {
-  width: 2.5rem;
-  height: 2.5rem;
-
+.resetSearchCountry {
+  font-size: 2.5rem;
   color: #333029;
 
   position: absolute;
@@ -43,16 +41,18 @@
 }
 
 .selectRegion {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   min-width: 15rem;
   padding: 1.6rem 2rem;
 
-  border: none;
   border-radius: 0.4rem;
   background-color: #f4f2f2;
   box-shadow: 5px 6px 4px 0px rgba(0, 0, 0, 0.3);
 
   color: #333029;
-
+  
   position: relative;
   user-select: none;
   cursor: pointer;
@@ -61,6 +61,15 @@
 .selectRegionTitle {
   font-size: 2rem;
   text-align: center;
+}
+
+.resetSelectRegion {
+  font-size: 2.5rem;
+  transition: color 0.2s linear;
+
+  :hover {
+    color: #f44250;
+  }
 }
 
 .selectRegionList {
