--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap');
 
 * {
   margin: 0;
@@ -41,6 +41,12 @@ svg {
   height: auto;
 }
 
+:root {
+  --light: #f3f4f6;
+  --dark: #331c21;
+  --orange: #fcbc44;
+}
+
 html {
   font-size: 62.5%;
 }
@@ -50,9 +56,8 @@ body {
   height: 100%;
   overflow-x: hidden;
 
-  font-family: 'Josefin Sans', sans-serif;
+  font-family: 'Roboto Slab', serif;
   font-weight: 400;
-  color: teal;
 }
 
 .app {
@@ -63,13 +68,13 @@ body {
 }
 
 .app.light {
-  background-color: #e3e3e3;
-  color: #333029;
+  background-color: var(--light);
+  color: var(--dark);
 }
 
 .app.dark {
-  background-color: #333029;
-  color: #e3e3e3;
+  background-color: var(--dark);
+  color: var(--light);
 }
 
 .main {
